- Updated main controller and view to handle the new workflow. The textarea is now used as status display.

--- a/manager/src/main/resources/inflationManagerMain.css
+++ b/manager/src/main/resources/inflationManagerMain.css
@@ -1,7 +1,8 @@
 .text-area {
     -fx-font-family: Monotype;
-    -fx-text-fill: #BABABA;
-    -fx-display-caret: true;
+    -fx-font-size: 14pt;
+    -fx-text-fill: #eeeed9;
+    -fx-display-caret: false;
 }
 
 .text-area .content {
