--- a/manager/src/main/resources/inflationManagerMain.css
+++ b/manager/src/main/resources/inflationManagerMain.css
@@ -1,5 +1,6 @@
 .text-area {
     -fx-font-family: Monospaced;
+    -fx-font-size: 8pt;
     -fx-text-fill: #eeeed9;
     -fx-display-caret: false;
 }
